# aitorrent

./: .gitignore  README.md  pyproject.toml
aitorrent/: __init__.py  config.py
aitorrent/api/: cli.py  server.py
aitorrent/api/static/: index.html
aitorrent/credit/: crypto.py  ledger.py  pricing.py  tit_for_tat.py  verification.py
aitorrent/inference/: failover.py  kv_cache.py  orchestrator.py  pipeline.py  scheduler.py  session.py
aitorrent/model/: assignment.py  loader.py  manifest.py  profiler.py  slicer.py
aitorrent/network/: discovery.py  health.py  peer.py  serialization.py  transport.py
aitorrent/network/proto/: tensor.proto
aitorrent/registry/: catalog.py  torrent_file.py
examples/: quickstart.py
tests/: conftest.py
tests/integration/: test_kv_cache.py  test_three_peers.py  test_two_peers.py
tests/test_credit/: test_crypto.py  test_ledger.py
tests/test_inference/: test_failover.py
tests/test_model/: test_manifest.py  test_slicer.py
tests/test_network/: test_discovery.py  test_serialization.py
