[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aitorrent"
version = "0.1.0"
description = "BitTorrent-inspired distributed AI model serving framework"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "safetensors>=0.4",
    "grpcio>=1.60",
    "grpcio-tools>=1.60",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "typer>=0.12",
    "rich>=13.0",
    "cryptography>=42.0",
    "msgpack>=1.0",
    "psutil>=5.9",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
gpu = ["pynvml>=11.5"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[project.scripts]
aitorrent = "aitorrent.api.cli:app"

[tool.setuptools.packages.find]
include = ["aitorrent*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
